Zapomněl jsem editovat, snad tu bude všechno. Přidání nového sloupce color pro možnost změny barvy kategorií v dashboard u tabluky Produktů. Také jsem implementoval pluto_grid pro interaktivní a lepší tabulky. Už jsou funkční proudkty, zobrazují se i na homepage. Také jsem přidal tlačítko pro přidání nových produktů. Zatím se ale produkty nezobrazují na stránce pro produkty.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.10.3
   sidebarx: ^0.17.1
+  pluto_grid: ^8.1.0
 
 dev_dependencies:
   flutter_test:
